# fl-monorepo

./: pyproject.toml
doc/migration_docs/: lazylibschema.sql
fastfrontend/fastlibrarian/: app.json  package-lock.json  package.json
fastfrontend/fastlibrarian/app/: BookCard.tsx  Navbar.tsx  _layout.tsx  author.tsx  authors.tsx  book.tsx  books.tsx  config.tsx  index.tsx  series.tsx  sharedstyles.tsx
fastlibrarian/: config.py  db.py  main.py
fastlibrarian/api/: database.py  main.py
fastlibrarian/api/migrations/: env.py
fastlibrarian/api/migrations/versions/: 001_initial_schema.py  f94ef077a93e_update_author_and_book_models.py
fastlibrarian/api/models/: main.py
fastlibrarian/api/modules/: authors.py  books.py
fastlibrarian/api/routers/: __init__.py  authors.py  books.py
fastlibrarian/api/schemas/: __init__.py  author.py  book.py  series.py  user.py
fastlibrarian/models/: authors.py  books.py  schemas.py  series.py  shared.py
fastlibrarian/modules/: bookshop.py  hardcover.py  qbittorrent.py
fastlibrarian/routers/: __init__.py  authors.py  books.py  config.py  series.py  shared.py
fastlibrarian/web/: package-lock.json  package.json
fastlibrarian/web/src/routes/: +page.svelte
migrations/: env.py
migrations/versions/: 078a59516627_add_audio_and_physical_status_columns_.py  0aa360f2af9a_add_tags.py  1758f73a4ac4_add_more_fields.py  33bf154547fb_add_status_column_and_add_date.py  35e314371481_initialize_models.py  575705550f21_change_models_to_new_structure.py  a9c2edea4d55_add_secondary_tables_for_performance_.py  aba238d9f70a_fix_relationships.py
(+6 files in other folders)
