[tool.poetry]
name = "fastlibrarian"
version = "0.1.0"
description = ""
authors = ["0xChloe <chloe@catastrophesoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.15.1"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
