[tool.poetry]
name = "fastlibrarian"
version = "0.1.0"
description = ""
authors = ["0xChloe <chloe@catastrophesoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.15.1"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.39"
pydantic = {extras = ["email"], version = "^2.10.6"}
asyncpg = "^0.30.0"
psycopg2 = "^2.9.10"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
loguru = "^0.7.3"
beautifulsoup4 = "^4.13.3"
pydantic-settings = "^2.10.1"
rtoml = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
